Deployment/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: test
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: "nniikkoollaaii/oauth2-proxy-example-keycloak:0.5.0"
          ports:
            - name: admin
              containerPort: 9990
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
