Deployment/keycloak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: test
  labels:
    app: keycloak
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - <domain>
      secretName: test-tls
  rules:
    - host: <domain>
      http:
        paths:
          #- path: /auth(/|$)(.*)
          - path: /auth
            backend:
              serviceName: keycloak
              servicePort: http
